--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Quiz Futebol</title>
+  <link rel="website icon" type="png" href="./imgs/ball.png" />
   <link rel="stylesheet" href="style.css" />
   <!-- Ionicons para ícones sociais -->
   <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
